<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutFrameStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewAboutDevelopedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAboutTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/text_developed_by"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonAboutHomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAboutDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ps2_button"
        android:text="@string/url_homepage" />

    <TextView
        android:id="@+id/textViewAboutDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAboutDevelopedBy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
		android:background="@drawable/ps2_button"
        android:text="@string/text_about_description" />

</RelativeLayout>