<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutFillParentStyle">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/BLACK"
        android:contentDescription="@string/text_Background"
        android:scaleType="fitStart"
        android:src="@drawable/ps2_activity_background" />

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
	        	
        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_title" />
		
			<android.support.v4.view.ViewPager
			    android:id="@+id/profilePager"
			    android:layout_width="match_parent"
			    android:layout_height="38dp" >
			
			    <android.support.v4.view.PagerTitleStrip
			        style="@style/LayoutFrameStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="top"
			        android:paddingBottom="4dp"
			        android:paddingTop="4dp" />
			
			</android.support.v4.view.ViewPager>
		<ScrollView 
		    android:id="@+id/scrollViewLayoutProfile"
		    style="@style/LayoutFrameStyle"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" >
		
		    <LinearLayout
		        android:id="@+id/linearLayoutProfile"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:paddingLeft="5dp"
		        android:paddingRight="5dp" >
		
		        <ImageView
		            android:id="@+id/imageViewProfileFaction"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:layout_marginBottom="2dp"
		            android:layout_marginTop="2dp"
		            android:contentDescription="@string/text_faction_icon" />
		
		        <LinearLayout
		            style="@style/LayoutFrameStyle"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="10dp" >
		
		            <TextView
		                android:id="@+id/textViewCurrentRank"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_marginLeft="5dp"
		                android:layout_marginStart="5dp"
		                android:background="@drawable/battle_rank_on"
		                android:gravity="center"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		
		            <ProgressBar
		                android:id="@+id/progressBarProfileBRProgress"
		                style="?android:attr/progressBarStyleHorizontal"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_weight="10"
		                android:indeterminate="false"
		                android:progress="0"
		                android:progressDrawable="@drawable/ps2_progress_bar_state_br" />
		
		            <TextView
		                android:id="@+id/textViewNextRank"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="5dp"
		                android:layout_marginRight="5dp"
		                android:layout_marginEnd="5dp"
		                android:layout_marginTop="5dp"
		                android:background="@drawable/battle_rank_off"
		                android:gravity="center"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		        </LinearLayout>
		
		        <LinearLayout
		            style="@style/LayoutFrameStyle"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="10dp" >
		
		            <ProgressBar
		                android:id="@+id/progressBarProfileCertsProgress"
		                style="?android:attr/progressBarStyleHorizontal"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_weight="10"
		                android:indeterminate="false"
		                android:progress="0"
		                android:progressDrawable="@drawable/ps2_progress_bar_state_certs" />
		
		            <ImageView
		                android:id="@+id/imageViewProfileCert"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:contentDescription="@string/text_certs"
		                android:src="@drawable/certification" />
		
		            <TextView
		                android:id="@+id/textViewProfileCertsValue"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_marginRight="5dp"
		                android:layout_marginEnd="5dp"
		                android:gravity="center_vertical"
		                android:textAppearance="?android:attr/textAppearanceLarge" />
		        </LinearLayout>
		
		        <LinearLayout
		            style="@style/LayoutFrameStyle"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical"
		            android:paddingBottom="15dp"
		            android:paddingLeft="15dp"
		            android:paddingRight="15dp"
		            android:paddingTop="15dp" >
		
		            <LinearLayout
		                style="@style/LayoutFrameStyle"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="10dp"
		                android:orientation="vertical" >
		
		                <TextView
		                    android:id="@+id/TextViewProfileLoginStatus"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginRight="5dp"
		                    android:text="@string/text_status"
		                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		                <TextView
		                    android:id="@+id/TextViewProfileLoginStatusText"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginBottom="10dp"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginStart="5dp"
		                    android:textAppearance="?android:attr/textAppearanceMedium" />
		            </LinearLayout>
		
		            <LinearLayout
		                style="@style/LayoutFrameStyle"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="10dp"
		                android:orientation="vertical" >
		
		                <TextView
		                    android:id="@+id/textViewLastLogin"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginRight="5dp"
		                    android:text="@string/text_last_login"
		                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		                <TextView
		                    android:id="@+id/textViewProfileLastLogin"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginBottom="10dp"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginStart="5dp"
		                    android:textAppearance="?android:attr/textAppearanceMedium" />
		            </LinearLayout>
		
		            <LinearLayout
		                style="@style/LayoutFrameStyle"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="10dp"
		                android:orientation="vertical" >
		
		                <TextView
		                    android:id="@+id/textViewOutfit"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginRight="5dp"
		                    android:text="@string/title_outfit"
		                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		                <Button
		                    android:id="@+id/buttonProfileToOutfit"
		                    style="@style/ButtonStyle"
		                    android:alpha="0.3"
		                    android:enabled="True"
		                    android:text="@string/text_none" />
		
		            </LinearLayout>
		
		            <LinearLayout
		                style="@style/LayoutFrameStyle"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="10dp"
		                android:orientation="vertical" >
		
		                <TextView
		                    android:id="@+id/textViewServer"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginRight="5dp"
		                    android:text="@string/title_server"
		                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		                <TextView
		                    android:id="@+id/textViewServerText"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginBottom="10dp"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginStart="5dp"
		                    android:text="@string/title_unkown"
		                    android:textAppearance="?android:attr/textAppearanceMedium" />
		            </LinearLayout>
		
		            <LinearLayout
		                style="@style/LayoutFrameStyle"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="10dp"
		                android:orientation="vertical" >
		
		                <TextView
		                    android:id="@+id/textViewMinutesPlayed"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginRight="5dp"
		                    android:text="@string/text_hours_played"
		                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		                <TextView
		                    android:id="@+id/textViewProfileMinutesPlayed"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginBottom="10dp"
		                    android:layout_marginLeft="5dp"
		                    android:layout_marginStart="5dp"
		                    android:textAppearance="?android:attr/textAppearanceMedium" />
		            </LinearLayout>
		        </LinearLayout>
		    </LinearLayout>
		</ScrollView>
	</LinearLayout>
</FrameLayout>